--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,4 +1,4 @@
-name: "Bug: "
+name: Bug report
 description: Report a problem or unexpected behaviour
 labels: [bug]
 body:
@@ -117,5 +117,5 @@ body:
             },
           },
         }, {})
-validations:
-required: true
+    validations:
+      required: true
