docs: update issue templates

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -66,53 +66,49 @@ body:
             'vyfor/cord.nvim',
             build = './build',
             opts = {
-              usercmds = true,                              -- Enable user commands
+              usercmds = true,
               timer = {
-                enable = true,                              -- Enable automatically updating presence
-                interval = 1500,                            -- Interval between presence updates in milliseconds (min 500)
-                reset_on_idle = false,                      -- Reset start timestamp on idle
-                reset_on_change = false,                    -- Reset start timestamp on presence change
+                enable = true,
+                interval = 1500,
+                reset_on_idle = false,
+                reset_on_change = false,
               },
               editor = {
-                image = nil,                                -- Image ID or URL in case a custom client id is provided
-                client = 'neovim',                          -- vim, neovim, lunarvim, nvchad, astronvim or your application's client id
-                tooltip = 'The Superior Text Editor',       -- Text to display when hovering over the editor's image
+                image = nil,
+                client = 'neovim',
+                tooltip = 'The Superior Text Editor',
               },
               display = {
-                show_time = true,                           -- Display start timestamp
-                show_repository = true,                     -- Display 'View repository' button linked to repository url, if any
-                show_cursor_position = true,                -- Display line and column number of cursor's position
-                swap_fields = false,                        -- If enabled, workspace is displayed first
-                workspace_blacklist = {},                   -- List of workspace names to hide
+                show_time = true,
+                show_repository = true,
+                show_cursor_position = true,
+                swap_fields = false,
+                workspace_blacklist = {},
               },
               lsp = {
-                show_problem_count = false,                 -- Display number of diagnostics problems
-                severity = 1,                               -- 1 = Error, 2 = Warning, 3 = Info, 4 = Hint
-                scope = 'workspace',                        -- buffer or workspace
+                show_problem_count = false,
+                severity = 1,
+                scope = 'workspace',
               },
               idle = {
-                show_idle = true,                           -- Enable idle status
-                timeout = 300000,                           -- Timeout in milliseconds after which the idle status is set, 0 to display immediately
-                disable_on_focus = true,                    -- Do not display idle status when neovim is focused
-                text = 'Idle',                              -- Text to display when idle
-                tooltip = '💤',                             -- Text to display when hovering over the idle image
+                show_idle = true,
+                timeout = 300000,
+                disable_on_focus = true,
+                text = 'Idle',
+                tooltip = '💤',
               },
               text = {
-                viewing = 'Viewing {}',                     -- Text to display when viewing a readonly file
-                editing = 'Editing {}',                     -- Text to display when editing a file
-                file_browser = 'Browsing files in {}',      -- Text to display when browsing files (Empty string to disable)
-                plugin_manager = 'Managing plugins in {}',  -- Text to display when managing plugins (Empty string to disable)
-                workspace = 'In {}',                        -- Text to display when in a workspace (Empty string to disable)
+                viewing = 'Viewing {}',
+                editing = 'Editing {}',
+                file_browser = 'Browsing files in {}',
+                plugin_manager = 'Managing plugins in {}',
+                workspace = 'In {}',
               },
               buttons = {
                 {
-                  label = 'View repository',                -- Text displayed on the button
-                  url = 'git',                              -- URL where the button leads to ('git' = Git repository URL)
+                  label = 'View repository',
+                  url = 'git',
                 },
-                -- {
-                --   label = 'View plugin',
-                --   url = 'https://github.com/vyfor/cord.nvim',
-                -- }
               },
             },
           },
