--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,12 @@ name: Rust
 on:
   push:
     branches: [ "master" ]
+    paths:
+      - "src/**"
   pull_request:
     branches: [ "master" ]
+    paths:
+      - "src/**"
 
 env:
   CARGO_TERM_COLOR: always
