--- a/.github/workflows/lua.yml
+++ b/.github/workflows/lua.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Lint Lua
         uses: lunarmodules/luacheck@v1
       
-      - name: Format Lua if needed
+      - name: Format Lua
+        if: github.event_name == 'push'
         uses: JohnnyMorganz/stylua-action@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -30,6 +31,7 @@ jobs:
           args: lua --color always
 
       - name: Apply changes
+        if: github.event_name == 'push'
         run: |
           git config --global user.name "vyfor"
           git config --global user.email "92883017+vyfor@users.noreply.github.com"
