docs(templates): update issue templates

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -66,50 +66,55 @@ body:
             'vyfor/cord.nvim',
             build = './build',
             opts = {
-              usercmds = true,
-              timer = {
-                enable = true,
-                interval = 1500,
-                reset_on_idle = false,
-                reset_on_change = false,
-              },
-              editor = {
-                image = nil,
-                client = 'neovim',
-                tooltip = 'The Superior Text Editor',
-              },
-              display = {
-                show_time = true,
-                show_repository = true,
-                show_cursor_position = true,
-                swap_fields = false,
-                workspace_blacklist = {},
-              },
-              lsp = {
-                show_problem_count = false,
-                severity = 1,
-                scope = 'workspace',
-              },
-              idle = {
-                show_idle = true,
-                timeout = 300000,
-                disable_on_focus = true,
-                text = 'Idle',
-                tooltip = '💤',
-              },
-              text = {
-                viewing = 'Viewing {}',
-                editing = 'Editing {}',
-                file_browser = 'Browsing files in {}',
-                plugin_manager = 'Managing plugins in {}',
-                workspace = 'In {}',
-              },
-              buttons = {
-                {
-                  label = 'View repository',
-                  url = 'git',
+                usercmds = true,
+                log_level = nil,
+                timer = {
+                  interval = 1500,
+                  reset_on_idle = false,
+                  reset_on_change = false,
                 },
-              },
+                editor = {
+                  image = nil,
+                  client = 'neovim',
+                  tooltip = 'The Superior Text Editor',
+                },
+                display = {
+                  show_time = true,
+                  show_repository = true,
+                  show_cursor_position = false,
+                  swap_fields = false,
+                  swap_icons = false,
+                  workspace_blacklist = {},
+                },
+                lsp = {
+                  show_problem_count = false,
+                  severity = 1,
+                  scope = 'workspace',
+                },
+                idle = {
+                  enable = true,
+                  show_status = true,
+                  timeout = 1800000,
+                  disable_on_focus = true,
+                  text = 'Idle',
+                  tooltip = '💤',
+                },
+                text = {
+                  viewing = 'Viewing {}',
+                  editing = 'Editing {}',
+                  file_browser = 'Browsing files in {}',
+                  plugin_manager = 'Managing plugins in {}',
+                  lsp_manager = 'Configuring LSP in {}',
+                  vcs = 'Committing changes in {}',
+                  workspace = 'In {}',
+                },
+                buttons = {
+                  {
+                    label = 'View Repository',
+                    url = 'git',
+                  },
+                },
+                assets = {},
             },
           },
         }, {})
