--- a/build
+++ b/build
@@ -1,13 +1,10 @@
 #!/bin/sh
 
-# Check if Nix is installed
 if command -v nix >/dev/null 2>&1; then
-    echo "Nix found, using nix develop..."
-    nix develop
+    echo "Nix found, using nix develop..." 
+    nix develop --command sh -c 'rustc --crate-type=cdylib -C opt-level=3 -C panic=abort -C lto=fat -o cord src/lib.rs'
 else
-    echo "Nix not found. Make sure Rust and dependencies are installed manually."
+    echo "Nix not found. Make sure Rust and dependencies are installed manually." 
+    rustc --crate-type=cdylib -C opt-level=3 -C panic=abort -C lto=fat -o cord src/lib.rs
+
 fi
-
-# Compile the Rust project
-rustc --crate-type=cdylib -C opt-level=3 -C panic=abort -C lto=fat -o cord src/lib.rs
-
