--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "cord"
-version = "0.1.0"
+authors = ["vyfor"]
+categories = ["command-line-utilities"]
+description = "🚀 The most extensible Discord Rich Presence plugin for Neovim, powered by Rust."
 edition = "2021"
+keywords = ["discord-rpc", "discord", "rich-presence", "neovim", "plugin"]
+license = "Apache-2.0"
+name = "cord-nvim"
+repository = "https://github.com/vyfor/cord.nvim"
+version = "0.0.1"
 
 [[bin]]
 name = "cord"
