--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ keywords = ["discord-rpc", "discord", "rich-presence", "neovim", "plugin"]
 license = "Apache-2.0"
 name = "cord-nvim"
 repository = "https://github.com/vyfor/cord.nvim"
-version = "0.0.1"
+version = "0.0.2"
+rust-version = "1.85"
 
 [[bin]]
 name = "cord"
