--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ keywords = ["discord-rpc", "discord", "rich-presence", "neovim", "plugin"]
 license = "Apache-2.0"
 name = "cord-nvim"
 repository = "https://github.com/vyfor/cord.nvim"
-version = "0.0.2"
+version = "0.0.3"
 rust-version = "1.85"
 
 [[bin]]
 name = "cord"
 path = "src/main.rs"
+
+[profile.release]
+incremental = true
