--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,10 @@ jobs:
             target: i686-pc-windows-msvc
 
     steps:
+      - name: Echo version
+        run: |
+          echo "Detected version: ${{ needs.get-next-version.outputs.new-release-version }}"
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
