--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,12 +1,15 @@
 {
-  "branches": [
-    "master",
-    {
-      "name": "client-server",
-      "prerelease": "beta",
-      "channel": "beta"
-    }
-  ],
+  "release": {
+    "branches": [
+      "master",
+      {
+        "name": "client-server",
+        "prerelease": "beta",
+        "channel": "beta"
+      }
+    ],
+    "repositoryUrl": "https://github.com/vyfor/cord.nvim"
+  },
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
