chore: set previous release in `.releaserc.json`

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,6 +7,9 @@
       "channel": "beta"
     }
   ],
+  "lastRelease": {
+    "version": "1.0.0"
+  },
   "repositoryUrl": "https://github.com/vyfor/cord.nvim",
   "plugins": [
     "@semantic-release/commit-analyzer",
