--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -142,6 +142,9 @@ jobs:
     needs: [get-next-version, build]
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - uses: nvim-neorocks/luarocks-tag-release@v7
         with:
           # version: ${{ needs.get-next-version.outputs.new-release-version }}
