--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,7 +133,7 @@ jobs:
           npm install -g @semantic-release/changelog
           npm install -g @semantic-release/git
           npm install -g @semantic-release/github
-          npx semantic-release
+          npx semantic-release --repository-url https://github.com/vyfor/cord.nvim
 
   luarocks:
     name: LuaRocks Publish
@@ -144,6 +144,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: client-server
 
       - uses: nvim-neorocks/luarocks-tag-release@v7
         with:
