--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,6 +132,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: client-server
 
       - name: Check Server Version
         run: |
@@ -139,6 +140,7 @@ jobs:
           SERVER_VERSION=$(cat .github/server-version.txt | tr -d '\n')
           if [ "$CARGO_VERSION" != "$SERVER_VERSION" ]; then
             echo "$CARGO_VERSION" > .github/server-version.txt
+            git checkout client-server
             git config --global user.name 'github-actions[bot]'
             git config --global user.email 'github-actions[bot]@users.noreply.github.com'
             git add .github/server-version.txt
