--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,13 +90,13 @@ jobs:
       - name: Install additional targets
         run: rustup target add ${{ matrix.target }}
         
-      - name: Install cross
-        run: cargo install cross
-        
       - name: Build and copy (Windows)
         if: contains(matrix.target, 'windows')
         shell: pwsh
         run: |
+          if (!(Get-Command cross -ErrorAction SilentlyContinue)) {
+            cargo install cross
+          }
           cross build --release --target ${{ matrix.target }}
           New-Item -ItemType Directory -Force -Path dist
           $ARCH = "${{ matrix.target }}" -split '-' | Select-Object -First 1
@@ -105,6 +105,9 @@ jobs:
       - name: Build and copy (Non-Windows)
         if: contains(matrix.target, 'windows') != true
         run: |
+          if ! command -v cross &> /dev/null; then
+            cargo install cross
+          fi
           cross build --release --target ${{ matrix.target }}
           mkdir -p dist
           ARCH=$(echo ${{ matrix.target }} | cut -d '-' -f 1)
