--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -148,27 +148,28 @@ jobs:
 
       - name: Check Server Version
         run: |
+          CARGO_VERSION="${{ needs.get-next-version.outputs.new-release-version }}"
+
           git checkout client-server
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add Cargo.toml Cargo.lock
-          git commit -m "build: bump project version to $CARGO_VERSION [skip ci]"
+          git commit -m "build: bump project version to $CARGO_VERSION [skip ci]" || echo "nothing to commit"
 
           changes=$(git diff --name-only $(git describe --tags --abbrev=0)..HEAD -- src/)
 
           if [ -n "$changes" ]; then
-            CARGO_VERSION="${{ needs.get-next-version.outputs.new-release-version }}"
             SERVER_VERSION=$(cat .github/server-version.txt | tr -d '\n')
             if [ "$CARGO_VERSION" != "$SERVER_VERSION" ]; then
               echo "Server version needs to be updated"
               echo "$CARGO_VERSION" > .github/server-version.txt
               
               git add .github/server-version.txt
-              git commit -m "chore: update server version to $CARGO_VERSION [skip ci]"
+              git commit -m "chore: update server version to $CARGO_VERSION [skip ci]" || echo "nothing to commit"
             fi
           fi
 
-          git push
+          git push || echo "nothing to commit"
 
   release:
     runs-on: ubuntu-latest
@@ -179,6 +180,23 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Cache Cargo
+        uses: actions/cache@v4
+        id: cargo-cache
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: x86_64-unknown-linux-musl-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Install semantic-release-cargo
+        uses: taiki-e/install-action@v2
+        with:
+          tool: semantic-release-cargo@2
 
       - name: Download artifacts
         uses: actions/download-artifact@v3
@@ -195,6 +213,7 @@ jobs:
           npm install -g @semantic-release/changelog
           npm install -g @semantic-release/git
           npm install -g @semantic-release/github
+          npm install -g @semantic-release/exec
           npm install -g @semantic-release-cargo/semantic-release-cargo
           npx semantic-release --repository-url https://github.com/vyfor/cord.nvim
 
