--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -209,6 +209,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: |
+          git checkout client-server
+          git pull
           npm install -g semantic-release
           npm install -g @semantic-release/changelog
           npm install -g @semantic-release/git
