ci: update wiki workflow

--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -21,3 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: Andrew-Chen-Wang/github-wiki-action@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: .github/wiki
+          strategy: init
