docs(wiki): fix inconsistencies

--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -24,4 +24,5 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           path: .github/wiki
+          preprocess: true
           strategy: init
