--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,10 +114,20 @@ jobs:
           fi
           
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
+        with:
+          name: cord-server-${{ matrix.target }}
+          path: dist/*
+
+  merge:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Merge Artifacts
+        uses: actions/upload-artifact/merge@v4
         with:
           name: binaries
-          path: dist/*
+          pattern: cord-server-*
 
   check-server:
     runs-on: ubuntu-latest
@@ -179,7 +189,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     if: needs.get-next-version.outputs.new-release-published == 'true'
-    needs: [get-next-version, build, check-server]
+    needs: [get-next-version, build, check-server, merge]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -209,7 +219,7 @@ jobs:
           tool: semantic-release-cargo@2
 
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: binaries
           path: dist
