--- a/.github/workflows/lua.yml
+++ b/.github/workflows/lua.yml
@@ -32,8 +32,9 @@ jobs:
       - name: Apply changes
         if: github.event_name == 'push'
         run: |
-          git config --global user.name "vyfor"
-          git config --global user.email "92883017+vyfor@users.noreply.github.com"
+          git pull
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
-          git commit -m "style(stylua): format Lua code" || echo "No changes to commit"
+          git commit -m "style(lua): reformat code" || echo "No changes to commit"
           git push
