--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -5,24 +5,14 @@ body:
   - type: textarea
     attributes:
       label: "Description"
-      description: "Description of the problem you are facing"
-    validations:
-      required: true
-  - type: input
-    attributes:
-      label: "Operating system"
-      placeholder: "Ubuntu 22.04.4"
+      description: "Description of the problem you are facing. You may include any relevant logs, screenshots, etc."
     validations:
       required: true
   - type: textarea
     attributes:
-      label: "Neovim version"
-      description: "`nvim -v`"
+      label: "Checkhealth"
+      description: "Output of `:checkhealth cord`"
       render: markdown
-      placeholder: |
-        NVIM v0.10.0-dev-2671+gdc110cba3
-        Build type: RelWithDebInfo
-        LuaJIT 2.1.1710088188
     validations:
       required: true
   - type: textarea
@@ -30,7 +20,7 @@ body:
       label: "Steps to reproduce"
       description: "Steps to reproduce the issue with the minimal configuration"
       placeholder: |
-        1. `nvim -nu init.lua`
+        1. `nvim -nu repro.lua`
         2. ...
     validations:
       required: true
@@ -41,32 +31,26 @@ body:
   - type: textarea
     attributes:
       label: "Actual behavior"
-      description: "What actually happens. You may include any relevant logs, screenshots, etc."
+      description: "What actually happens."
   - type: textarea
     attributes:
-       label: "Minimal configuration"
-       description: "Minimal configuration to reproduce the issue"
-       render: Lua
-       value: |
-        local lazypath = vim.fn.stdpath('data') .. '/lazy/lazy.nvim'
-        if not (vim.uv or vim.loop).fs_stat(lazypath) then
-          vim.fn.system({
-            'git',
-            'clone',
-            '--filter=blob:none',
-            'https://github.com/folke/lazy.nvim.git',
-            '--branch=stable',
-            lazypath,
-          })
-        end
-        vim.opt.rtp:prepend(lazypath)
+      label: "Minimal configuration"
+      description: "Minimal configuration to reproduce the issue"
+      render: Lua
+      value: |
+        vim.env.LAZY_STDPATH = '.repro'
+        load(vim.fn.system 'curl -s https://raw.githubusercontent.com/folke/lazy.nvim/main/bootstrap.lua')()
 
-        require('lazy').setup({
-          {
-            'vyfor/cord.nvim',
-            build = './build',
-            opts = {},
+        require('lazy.minit').repro {
+          spec = {
+            {
+              'vyfor/cord.nvim',
+              branch = 'client-server',
+              build = ':Cord update',
+            },
           },
-        }, {})
+        }
+
+        -- do anything else you need to do to reproduce the issue
     validations:
       required: true
