--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,32 +16,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Cache Cargo
-        uses: actions/cache@v4
-        id: cargo-cache
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: x86_64-unknown-linux-musl-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - name: Install semantic-release-cargo
-        uses: taiki-e/install-action@v2
-        with:
-          tool: semantic-release-cargo@2      
       - uses: actions/setup-node@v4
         with:
           node-version: '21'
       - run: |
           npm install -g semantic-release
-          npm install -g @semantic-release/changelog
-          npm install -g @semantic-release/git
-          npm install -g @semantic-release/github
-          npm install -g @semantic-release/exec
-          npm install -g @semantic-release-cargo/semantic-release-cargo
-          npx semantic-release --dry-run --repository-url https://github.com/vyfor/cord.nvim
+          npx semantic-release --dry-run --repository-url https://github.com/vyfor/cord.nvim --plugins @semantic-release/commit-analyzer
         id: get-next-version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
