ci: update release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - run: |
           npm install -g semantic-release
           npm install --save-dev semantic-release-export-data
-          npx semantic-release --dry-run --repository-url https://github.com/vyfor/cord.nvim --plugins @felipecrs/semantic-release-export-data @semantic-release/commit-analyzer
+          npx semantic-release --dry-run --repository-url https://github.com/vyfor/cord.nvim --plugins semantic-release-export-data @semantic-release/commit-analyzer
         id: get-next-version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
