--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,17 +7,18 @@ on:
 
 permissions:
   contents: read
-  pull-requests: write
+  pull-requests: read
 
 jobs:
   validate-pr-title:
-    name: Validate PR Title
+    name: Validate PR title
     runs-on: ubuntu-latest
     steps:
-      - name: PR Conventional Commit Validation
-        uses:  ytanikin/pr-conventional-commits@1.4.0
+      - uses: amannn/action-semantic-pull-request@v5
         with:
-          task_types: '["feat","fix","docs","test","ci","refactor","perf","chore","revert","build","style"]'
+          requireScope: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   validate-commits:
     name: Validate PR Commits
