--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,15 @@ jobs:
         with:
           node-version: '21'
       - run: |
+          git pull
           npm install -g semantic-release
-          npm install --save-dev semantic-release-export-data
-          npx semantic-release --dry-run --repository-url https://github.com/vyfor/cord.nvim --plugins semantic-release-export-data @semantic-release/commit-analyzer
+          npm install -g @semantic-release/changelog
+          npm install -g @semantic-release/git
+          npm install -g @semantic-release/github
+          npm install -g @semantic-release/exec
+          npm install -g @semantic-release-cargo/semantic-release-cargo
+          npm install -g semantic-release-export-data
+          npx semantic-release --dry-run --repository-url https://github.com/vyfor/cord.nvim
         id: get-next-version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -244,6 +250,7 @@ jobs:
           npm install -g @semantic-release/github
           npm install -g @semantic-release/exec
           npm install -g @semantic-release-cargo/semantic-release-cargo
+          npm install -g semantic-release-export-data
           npx semantic-release --repository-url https://github.com/vyfor/cord.nvim
 
   luarocks:
